@@ -1,6 +1,6 @@
 " vifm syntax file
 " Maintainer:  xaizek <xaizek@posteo.net>
-" Last Change: May 17, 2023
+" Last Change: June 2, 2023
 " Inspired By: Vim syntax file by Dr. Charles E. Campbell, Jr.
 
 if exists('b:current_syntax')
@@ -135,8 +135,10 @@ syntax keyword vifmHiColors contained black red green yellow blue magenta cyan
 		\ Khaki1 Wheat1 Cornsilk1 Grey100 Grey3 Grey7 Grey11 Grey15 Grey19 Grey23
 		\ Grey27 Grey30 Grey35 Grey39 Grey42 Grey46 Grey50 Grey54 Grey58 Grey62
 		\ Grey66 Grey70 Grey74 Grey78 Grey82 Grey85 Grey89 Grey93
-
 syntax case match
+syntax match vifmHiGroups contained "column:[A-Z][a-zA-Z]*"
+syntax match vifmHiGroups contained
+		\ "column:\(ext\|name\|size\|atime\|ctime\|mtime\|iname\|dir\|type\|fileext\|nitems\|groups\|target\|root\|fileroot\|gid\|gname\|mode\|uid\|uname\|perms\|nlinks\|inode\)"
 
 " Options
 syntax keyword vifmOption contained aproposprg autocd autochpos caseoptions
